--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "chai": "^3.5.0",
     "enzyme": "^2.0.0",
     "eslint": "^2.2.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard-jsx": "^1.1.1",
+    "eslint-config-standard-react": "^2.3.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-react": "^4.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "jsdom": "^8.0.4",
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
